# xlsx_extractor

./: .gitignore  Cargo.toml  Readme.md  Readme_ja.md
.github/workflows/: rust.yml
graph/: Thumbs.db
src/: main.rs
tests/: cli_tests.rs  config.toml  format_id.xlsm  format_id_config.toml  test.md  test.xlsm  test.xlsx  test_xlsm.md  unknown_format_config.toml
tests/output/: output.toml
tests/output/output.in/: output.xlsx
tests/output/output.out/: output.csv
