[package]
name = "xlsx_extractor"
version = "0.1.0"
edition = "2021"
authors = ["i.poper@gmail.com"]
license = "Apache-2.0"
readme = "Readme.md"
description = "Tool to extract data from xlsx(xlsm) by specifying headers."

[dependencies]
clap = "4.5.4"
clap_derive = "4.5.4"
csv = "1.3.0"
trycmd = "0.15.4"
umya-spreadsheet = "2.0.0"
unescape = "0.1.0"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
