[package]
name = "xlsx_extractor"
version = "0.2.0"
edition = "2024"
authors = ["i.poper@gmail.com"]
license = "Apache-2.0"
readme = "Readme.md"
description = "Tool to extract data from xlsx(xlsm) by specifying headers."

[dependencies]
clap = "4.6.1"
clap_derive = "4.6.1"
csv = "1.4.0"
umya-spreadsheet = "3.0.0"
unescape = "0.1.0"
ssfmt = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
trycmd = "1.2.0"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
